# beardb-api

./: BearDBAPI.py  README.md  app.py  makeapi.py  pyproject.toml  requirements.txt  run.py  setup.py  test.py  users.json
 BeardbAPI/: BeardbAPI.py
BeardAPI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
BeardbAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/controllers/: pages.py
beardb-server/: LICENSE  README.md  run.py  users.json
beardb-server/app/: __init__.py
beardb-server/app/controllers/: pages.py
beardb-server/flaskboilerplate-main/: requirements.txt  run.py  users.json
beardb-server/flaskboilerplate-main/app/controllers/: pages.py
beardb-server/flaskboilerplate-main/website/insights/: data.json
beardb-server/flaskboilerplate-main/website_50287246-656b-11ed-8916-a6bd5a94b3a6/insights/: data.json
beardb-server/website/insights/: data.json
beardb-server/website_da6a4f4e-6c7b-11ed-8f94-a6bd5a94b3a6/users/: users.json
myap/: .bdb  users.json
src/: BeardbAPI.py  __init__.py  run.py  test.py  users.json
src/app/controllers/: pages.py
src/config/development/: requirements.txt
src/test_app/: .bdb
tddy/: .bdb  users.json
tddy/idea_db067f2a-7ac4-11ed-aaf7-324d38bf6d76/appp/: users.json
