[project]
name = "BeardbAPI"
version = "0.0.1"
authors = [
  { name="Teddy Oweh", email="teddy@teddyoweh.net" },
]
description = "Microservice to deploy JSON Databases Remotely."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/teddyoweh/beardb-api"
"Bug Tracker" = "https://github.com/teddyoweh/beardb-api/issues"